# SlayBench

./: .gitignore  CLAUDE.md  CRITIQUE.md  LICENSE  README.md  config.sh  launch_instance.sh  make_fresh_template.sh  make_home_template.sh  pyproject.toml  redeploy.sh  run_test.sh
.github/workflows/: tests.yml
docs/: TROUBLESHOOTING.md
spirelink/: PROTOCOL.md  README.md  build.sh  install.sh  test.sh
spirelink/bridge/: continue_run.py  eval.py  inspect_report.py  inspect_task.py  instance.py  mcp_play_test.py  mcp_server.py  mock_game.py  play_test.py  real_play.py  replay.py  spire_cli.py
spirelink/mod/: CloudGuard.cs  Commands.cs  Decisions.cs  Driver.cs  DriverScreens.cs  Log.cs  ModInit.cs  MoreDecisions.cs  Robustness.cs  Snapshot.cs  SpireServer.cs  manifest.json  spirelink.csproj
